--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -18,6 +18,7 @@
         <!-- Your page content -->
         {% block content %}hello {% endblock %}
 
+        <h1>Hello, world!</h1>
 
         {% block scripts %}
             <!-- Optional JavaScript -->
