--- a/flaskr/templates/settings.html
+++ b/flaskr/templates/settings.html
@@ -27,13 +27,13 @@
                         <a class="nav-link" href="{{ url_for('homePage') }}">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('newInputsPage') }}">New Input Page</a>
+                        <a class="nav-link" href="{{ url_for('newInputsPage') }}">New Input</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('recordsPage') }}">Records Page</a>
+                        <a class="nav-link" href="{{ url_for('recordsPage') }}">Records </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('settingsPage') }}">Settings Page<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="{{ url_for('settingsPage') }}">Settings <span class="sr-only">(current)</span></a>
                   </li>
                 </ul>
             </div>
@@ -47,7 +47,13 @@
           		  Default title
           		{% endif %}
 	    </h1>
+        <h3>About</h3> 
         </div>
+        <footer>
+            <div class="container">
+                <p>&copy; 2024 HealthAssess. All rights reserved.</p>
+            </div>
+        </footer>
     </div>
 
     <!-- Optional JavaScript -->
