implemented GPT api calls

--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -40,6 +40,7 @@
         </nav>
 
         <div class="jumbotron">
+            
             <h1 class="display-4">
           		{% if title %}
           		  {{ title }}
@@ -47,6 +48,11 @@
           		  Default title
           		{% endif %}
 	    </h1>
+        <P>
+            {{ response_text}}
+
+
+        </P>
         </div>
     </div>
 
