--- a/flaskr/templates/newInputs.html
+++ b/flaskr/templates/newInputs.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="{{ url_for('recordsPage') }}">Records </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('settingsPage') }}">Settings </a>
+                      <a class="nav-link" href="{{ url_for('recommendationsPage') }}">Recommendations </a>
                   </li>
                 </ul>
             </div>
@@ -48,11 +48,8 @@
           		{% endif %}
 	    </h1>
         </div>
-        <footer>
-            <div class="container">
-                <p>&copy; 2024 HealthAssess. All rights reserved.</p>
-            </div>
-        </footer>
+    
+        <h3>Add a new input</h3>
     </div>
 
 
