--- a/flaskr/templates/recommendations.html
+++ b/flaskr/templates/recommendations.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="{{ url_for('recordsPage') }}">Records </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ url_for('settingsPage') }}">Settings <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="{{ url_for('recommendationsPage') }}">Recommendations <span class="sr-only">(current)</span></a>
                   </li>
                 </ul>
             </div>
@@ -46,8 +46,9 @@
           		{% else %}
           		  Default title
           		{% endif %}
-	    </h1>
-        <h3>About</h3> 
+	    </h1> 
+        <h4>Recipe Reccomendations:</h4>
+        {{response_text_recipe}}
         </div>
         <footer>
             <div class="container">
