--- a/flaskTry/templates/index.html
+++ b/flaskTry/templates/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Heart Rate Monitor</h1>
+    <h1>Data Input Testing</h1>
+    {{responseInputAnalysis}}
     <img src="{{ url_for('static', filename='graph.png') }}" alt="Heart Rate Graph">
     <button id="reloadButton">New Data Input</button>
 
@@ -16,5 +18,6 @@
             location.reload(); // Reload the page
         });
     </script>
+
 </body>
 </html>
