--- a/flaskr/templates/records.html
+++ b/flaskr/templates/records.html
@@ -50,8 +50,9 @@
             </h1>
             <br><br>
 
-            <h5>Heart Rate Analysis:</h5>
-            <p>{{ response_text}}</p>
+            <h5>Heart Rate Records:</h5>
+            <img src="{{ url_for('static', filename='image.png') }}" alt="Heart Rate Graph">
+            <!-- <p>{{ response_text}}</p> -->
 
 
         
